--- a/src/main/webapp/css/stylesheet.css
+++ b/src/main/webapp/css/stylesheet.css
@@ -34,7 +34,7 @@ body {
     
     fill: rgb(92, 92, 92);
     display:table-cell;
-    font-size: 90pt;
+    font-size: 20pt;
     font-weight: bold;
     font-family: 'Segoe UI', 'console', Calibri, sans-serif;
 }
@@ -58,7 +58,7 @@ body {
 .topLabel {
     fill: rgb(92, 92, 92);
     font-weight: bold;
-    font-size: 40pt;
+    font-size: 30pt;
     font-family: 'Gill Sans', 'Gill Sans MT', "Calibri", 'Trebuchet MS', sans-serif;
 }
 
@@ -77,8 +77,9 @@ body {
 }
 
 .barInfo {
+    color: black;
     fill: rgb(255, 255, 255);
-    font-size: 22pt;
+    font-size: 10pt;
     font-weight: 800;
     font-family: sans-serif;
 }
@@ -106,7 +107,7 @@ body {
 .growth {
     fill: rgb(92, 92, 92);
     font-weight: bold;
-    font-size: 40pt;
+    font-size: 30pt;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 /* MIKU色 */
